fix(ui): prevent saving truncated files without warning and strip banners from saved responses